--- a/UMBIT.ManagerAdmin.InterfaceWeb/Views/RegistroUsuario/Registro.cshtml
+++ b/UMBIT.ManagerAdmin.InterfaceWeb/Views/RegistroUsuario/Registro.cshtml
@@ -1,4 +1,4 @@
-﻿@model UMBIT.ManagerAdmin.InterfaceWeb.ViewModels.LoginRequest
+﻿@model UMBIT.ManagerAdmin.InterfaceWeb.ViewModels.LoginRegister
 
 @{
     ViewData["Title"] = "Login";
@@ -8,9 +8,10 @@
 
 <h4>LoginRequest</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
+        <form asp-action="Registro">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Senha" class="control-label"></label>
@@ -23,14 +24,17 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="EmailConfimarcao" class="control-label"></label>
+                <input asp-for="EmailConfimarcao" class="form-control" />
+                <span asp-validation-for="EmailConfimarcao" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-<div class="row">
-    <a asp-action="Registro">Cadastre-se Aqui!</a>
-</div>
+
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
