--- a/UMBIT.ManagerAdmin.InterfaceWeb/Views/Shared/_Layout.cshtml
+++ b/UMBIT.ManagerAdmin.InterfaceWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using UMBIT.ManagerAdmin.InterfaceWeb.Extensores;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -117,18 +118,20 @@
                 <ul class="metismenu" id="menu">
                     <li class="nav-label">Apps</li>
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-app-store"></i><span class="nav-text">Apps</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li><a asp-action="ROUTE">ROUTE</a></li>
-                            <li>
-                                <a class="has-arrow" href="javascript:void()" aria-expanded="false">ROUTE</a>
+                        @{
+                            foreach (var appServices in AppServicesHelper.GetServiceList())
+                            {
+                                <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                                    <i class="icon icon-app-store"></i><span class="nav-text">@appServices.NameApp</span>
+                                </a>
                                 <ul aria-expanded="false">
-                                    <li><a asp-action="SUB-ROUTE">SUB-ROUTE</a></li>
+                                    @foreach (var service in appServices.Services)
+                                    {
+                                        <li><a asp-action="@service.Key" asp-controller="@appServices.Controller">@service.Value</a></li>
+                                    }
                                 </ul>
-                            </li>
-                        </ul>
+                            }
+                        }
                     </li>
                 </ul>
             </div>
